# whisper-svc

./: Cargo.toml  README.md
src/: lib.rs  models.rs  resample.rs
