[package]
name = "whisper-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dasp = { version = "0.11.0", features = [
  "signal",
  "ring_buffer",
  "interpolate-sinc",
  "interpolate",
] }
dirs = "6.0.0"
flume = "0.11.1"
num_cpus = "1.16.0"
once_cell = "1.21.3"
redlux = { version = "0.7.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
whisper-rs = { version = "0.14.2", features = ["tracing_backend"] }

[features]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
openmp = ["whisper-rs/openmp"]
