[package]
name = "whisper-svc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dasp = { version = "0.11.0", features = [
  "signal",
  "ring_buffer",
  "interpolate-sinc",
  "interpolate",
] }
dirs = "6.0.0"
flume = "0.11.1"
num_cpus = "1.17.0"
once_cell = "1.21.4"
redlux = { version = "0.7.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
symphonia = { version = "0.5.5", default-features = false, features = ["mp3"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
whisper-rs = { version = "0.16.0", features = ["tracing_backend"] }

[features]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
openblas = ["whisper-rs/openblas"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
openmp = ["whisper-rs/openmp"]
